PUSH HTML project to file
HTML project file upload

--- a/Basic_HTML_5.html
+++ b/Basic_HTML_5.html
@@ -6,5 +6,12 @@
 	<body>
 		<p>Hello! My name is Justin!</p>
 		<p>These paragraphs are styled with CSS on an external file &amp; linked to this page!</p>
+		<!--This is a reserve character, something you need to write as an expression so it is not interpreted incorrectly on the HTML page -->
+		
+		<!-- This is a link that will open to another webpage in a seperate tab -->
+		<h4>
+		<!-- This header is emphasized -->
+			<em>This is a link to another HTML page</em><br>
+		<a href="Basic_HTML_4.html" target="new">This is another page with some CSS and HTML working together</a>
 	</body>
 </html>
