--- a/HTML Project/colgroup_table.html
+++ b/HTML Project/colgroup_table.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>The HTML Project</title>
 		<meta charset="utf-8">
 	</head>
 	<body>
     <table>
+    <colgroup>
         <col span="2" style="background-color: blueviolet">
         <col style="background-color: red;">
     </colgroup>
