--- a/one-page website/one_page_website.html
+++ b/one-page website/one_page_website.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+	<header>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="./css/one_page_website.css">
+	</header>
 	<head>
 		<div id="home">
 			<!-- This is my Title for my page also, home -->
