HTML/CSS Portfolio upload
This is my portfolio

--- a/HTML_CSS_Challenges/w3schools_html.html
+++ b/HTML_CSS_Challenges/w3schools_html.html
@@ -53,7 +53,7 @@
 
           <div class="overlay_container">
             <video class="overlay_image" autoplay muted loop controls>
-                <source href="./video/ski_vid.mp4" type="video/mp4">
+                <source src="./video/ski_vid.mp4" type="video/mp4">
             </video>
             <div class="overlay">
               <div class="text">We love to ski POW!</div>
