GitHub Desktop not pushing correctly

--- a/one-page website/one_page_website.html
+++ b/one-page website/one_page_website.html
@@ -26,25 +26,78 @@
 		</div>
 	</head>
 	<body>
-		<!-- this is my photo gallery -->
-		<div id="photo_gallery">
-			<h2><u>Photo Gallery</u></h2>
-			<div>
-			<!-- Photo 1 -->
-				<h4>Fresh Powder</h4>
-				<img src="./images/bc_ski_image_2.png" alt="Powder Shot">
-			</div>
-			<div>
-			<!-- Photo 2 -->
-				<h4>Guided Tours</h4>
-				<img src="./images/bc_ski_image_1.png" alt="Guided Tours">
-			</div>
-			<div>
-			<!-- Photo 3 -->
-				<h4>Stunning Views</h4>
-				<img src="./images/bc_ski_image_3.png" alt="Amazing Views">
-			</div>
-		</div>
+		<!-- this is my Modal Light Box images being used -->
+
+		<!-- Images used to open the lightbox -->
+ <!-- Images used to open the lightbox -->
+ <div class="row">
+	<div class="column">
+	  <img src="./images/bc_ski_image_1.png" onclick="openModal(); currentSlide(1)" class="hover-shadow">
+	</div>
+	<div class="column">
+	  <img src="./images/bc_ski_image_2.png" onclick="openModal(); currentSlide(2)" class="hover-shadow">
+	</div>
+	<div class="column">
+	  <img src="./images/bc_ski_image_3.png" onclick="openModal(); currentSlide(3)" class="hover-shadow">
+	</div>
+	<div class="column">
+	  <img src="./images/lake_louise.png" onclick="openModal(); currentSlide(4)" class="hover-shadow">
+	</div>
+  </div>
+  
+  <!-- The Modal/Lightbox -->
+  <div id="myModal" class="modal">
+	<span class="close cursor" onclick="closeModal()">&times;</span>
+	<div class="modal-content">
+  
+	  <div class="mySlides">
+		<div class="numbertext">1 / 4</div>
+		<img src="./images/bc_ski_image_1.png" style="width:100%">
+	  </div>
+  
+	  <div class="mySlides">
+		<div class="numbertext">2 / 4</div>
+		<img src="./images/bc_ski_image_2.png" style="width:100%">
+	  </div>
+  
+	  <div class="mySlides">
+		<div class="numbertext">3 / 4</div>
+		<img src="./images/bc_ski_image_3.png" style="width:100%">
+	  </div>
+  
+	  <div class="mySlides">
+		<div class="numbertext">4 / 4</div>
+		<img src="./images/lake_louise.png" style="width:100%">
+	  </div>
+  
+	  <!-- Next/previous controls -->
+	  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
+	  <!-- Caption text -->
+	  <div class="caption-container">
+		<p id="caption"></p>
+	  </div>
+  
+	  <!-- Thumbnail image controls -->
+	  <div class="column">
+		<img class="demo" src="./images/bc_ski_image_1.png" onclick="currentSlide(1)" alt="Deep Powder">
+	  </div>
+  
+	  <div class="column">
+		<img class="demo" src="./images/bc_ski_image_2.png" onclick="currentSlide(2)" alt="Huge Faces">
+	  </div>
+  
+	  <div class="column">
+		<img class="demo" src="./images/bc_ski_image_3.png" onclick="currentSlide(3)" alt="Endless Adventure">
+	  </div>
+  
+	  <div class="column">
+		<img class="demo" src="./images/lake_louise.png" onclick="currentSlide(4)" alt="The Most Beautiful place on earth">
+	  </div>
+	</div>
+  </div> 
+		
 		<!-- End gallery -->
 		
 		<!-- This is my video gallery -->
@@ -102,6 +155,6 @@
 		</div>
 		<p>Created by Justin Perry, 2020</p>
 	</footer>
-		
+	<script src="./js/one_page_website.js"></script>	
 	</body>
 </html>
